--- a/_config.yml
+++ b/_config.yml
@@ -17,26 +17,6 @@ theme: minimal-mistakes-jekyll
 plugins:
   - jekyll-feed
   - jekyll-multiple-languages-plugin
-
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
    
 footer:
   links:
@@ -49,6 +29,15 @@ footer:
     - label: Mail
       icon: "fas fa-envelope"
       url: "mailto:cc@12z1.com"
+
+# Github
+username: EKA2L1
+repo: eka2l1.github.io
+branch: main
+
+source: .
+destination: _site
+
 include: ["_pages"]
 
 defaults:
