--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email: cc@12z1.com
 description:
   An Experimental Symbian OS Emulator
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://12z1.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://12z1.com"
 github_username:  EKA2L1
 
 languages: [ "en", "vi" ]
@@ -29,14 +29,6 @@ footer:
     - label: Mail
       icon: "fas fa-envelope"
       url: "mailto:cc@12z1.com"
-
-# Github
-username: EKA2L1
-repo: eka2l1.github.io
-branch: main
-
-source: .
-destination: _site
 
 include: ["_pages"]
 
