--- a/_i18n/es.yml
+++ b/_i18n/es.yml
@@ -1,5 +1,5 @@
 global:
   screenshot_credit: "Creditos de las capturas de pantalla a:"
-  some_s60v1_games: "Ejemplos de juegos de S60v1"
-  some_s60v3_v5_games: "Ejemplos de juegos de S60v3 y S60v5"
+  some_s60v1_games: "Ejemplos de juegos S60v1"
+  some_s60v3_v5_games: "Ejemplos de juegos S60v3 y S60v5"
   emulated_mophun_games: "Ejemplos de juegos Mophun emulados en Symbian"
