--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,13 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://12z1.com"
 github_username:  EKA2L1
 
-languages: [ "en", "vi" ]
+languages: [ "en", "vi", "es" ]
 exclude_from_localization: ["assets", "CNAME"]
 defaultLang: en
 languageNames:
   en: English
   vi: Tiếng Việt
+  es: Español
 
 theme: minimal-mistakes-jekyll
 plugins:
