Add quickstart page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,6 +10,10 @@ main:
       es: "Descargas"
     url: download/
   - title:
+      en: "Quickstart"
+      vi: "Quickstart"
+    url: quickstart/
+  - title:
       en: "Screenshots"
       vi: "Ảnh tham khảo"
       es: "Galería"
