--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://12z1.com"
 github_username:  EKA2L1
 
-languages: [ "en", "vi", "es", "pt-br" ]
+languages: [ "en", "vi", "es", "pt-br", "ru" ]
 exclude_from_localization: ["assets", "CNAME"]
 defaultLang: en
 languageNames:
@@ -14,6 +14,7 @@ languageNames:
   vi: Tiếng Việt
   es: Español
   pt-br: Português brasileiro
+  ru: Русский
 
 theme: minimal-mistakes-jekyll
 plugins:
