--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,34 +4,40 @@ main:
       vi: "Trang chủ"
       es: "Inicio"
       pt-br: "início"
+      ru: "Главная"
     url: /
   - title:
       en: "Download"
       vi: "Tải xuống"
       es: "Descargas"
       pt-br: "Baixar"
+      ru: "Скачать"
     url: download/
   - title:
       en: "Quickstart"
       vi: "Quickstart"
       es: "Requisitos e instalación"
       pt-br: "Requisitos e instalação"
+      ru: "Установка"
     url: quickstart/
   - title:
       en: "Screenshots"
       vi: "Ảnh tham khảo"
       es: "Galería"
       pt-br: "Imagens"
+      ru: "Скриншоты"
     url: screenshots/
   - title:
       en: "Posts"
       vi: "Bài viết"
       es: "Posts"
       pt-br: "Posts"
+      ru: "Блог"
     url: posts/
   - title:
       en: "GitHub"
       vi: "Github"
       es: "Github"
       pt-br: "Github"
+      ru: "GitHub"
     url: https://github.com/EKA2L1/EKA2L1
