--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://12z1.com"
 github_username:  EKA2L1
 
-languages: [ "en", "vi", "es", "pt-br", "ru" ]
+languages: [ "en", "vi", "es", "pt-br", "zh-cn", "ru" ]
 exclude_from_localization: ["assets", "CNAME"]
 defaultLang: en
 languageNames:
@@ -15,6 +15,7 @@ languageNames:
   es: Español
   pt-br: Português brasileiro
   ru: Русский
+  zh-cn: 简体中文
 
 theme: minimal-mistakes-jekyll
 plugins:
