--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,16 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://12z1.com"
 github_username:  EKA2L1
 
-languages: [ "en", "vi", "es", "pt-br", "zh-cn", "ru" ]
+languages: [ "en", "zh-cn", "vi", "es", "pt-br", "ru" ]
 exclude_from_localization: ["assets", "CNAME"]
 defaultLang: en
 languageNames:
   en: English
+  zh-cn: 简体中文
   vi: Tiếng Việt
   es: Español
   pt-br: Português
   ru: Русский
-  zh-cn: 简体中文
 
 theme: minimal-mistakes-jekyll
 plugins:
