--- a/_config.yml
+++ b/_config.yml
@@ -27,12 +27,18 @@ footer:
     - label: Github
       icon: "fab fa-fw fa-github"
       url: "https://github.com/eka2l1/eka2l1"
+    - label: Discord
+      icon: "fab fa-discord"
+      url: "https://discord.gg/5Bm5SJ9"
     - label: Youtube
       icon: "fab fa-youtube"
       url: "https://www.youtube.com/channel/UCCdPQT6Le2xw_z9cutkVwyA"
     - label: Mail
       icon: "fas fa-envelope"
       url: "mailto:cc@12z1.com"
+    - label: Website source
+      icon: "fa fa-globe"
+      url: "https://github.com/EKA2L1/eka2l1.github.io"
 
 include: ["_pages"]
 
