--- a/_i18n/id.yml
+++ b/_i18n/id.yml
@@ -1,5 +1,5 @@
 global:
-  screenshot_credit: "Tangkapan layar credited ke"
+  screenshot_credit: "Tangkapan layar kreditkan ke"
   some_s60v1_games: "Beberapa game S60v1"
   some_s60v3_v5_games: "Beberapa game S60v3 dan S60v5"
   emulated_mophun_games: "Game Mophun yang diemulasi di Symbian"
