--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: EKA2L1
+title: EKA2L1 - Experimental Symbian OS Emulator
 email: cc@12z1.com
 description:
   An Experimental Symbian OS Emulator
