translate short desc

--- a/_i18n/vi.yml
+++ b/_i18n/vi.yml
@@ -3,3 +3,4 @@ global:
   some_s60v1_games: "Vài game S60v1"
   some_s60v3_v5_games: "Vài game S60v3 và S60v5"
   emulated_mophun_games: "Game Mophun được giả lập trên Symbian"
+  short_emu_desc: "Trình thử nghiệm giả lập Symbian"
