--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -3,3 +3,4 @@ global:
   some_s60v1_games: "Some S60v1 games"
   some_s60v3_v5_games: "Some S60v3 and S60v5 games"
   emulated_mophun_games: "Emulated Mophun games on Symbian"
+  short_emu_desc: "Experimental Symbian OS Emulator"
