--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,7 @@ main:
       pt-br: "início"
       ru: "Главная"
       zh-cn: "首页"
+      id: "Beranda"
     url: /
   - title:
       en: "Download"
@@ -14,6 +15,7 @@ main:
       pt-br: "Baixar"
       ru: "Скачать"
       zh-cn: "下载"
+      id: "Unduh"
     url: download/
   - title:
       en: "Quickstart"
@@ -22,6 +24,7 @@ main:
       pt-br: "Requisitos e instalação"
       ru: "Установка"
       zh-cn: "快速开始"
+      id: "Panduan Persyaratan dan Pemasangan"
     url: quickstart/
   - title:
       en: "Screenshots"
@@ -30,6 +33,7 @@ main:
       pt-br: "Imagens"
       ru: "Скриншоты"
       zh-cn: "截图"
+      id: "Pratinjau Screenshot"
     url: screenshots/
   - title:
       en: "Posts"
@@ -38,6 +42,7 @@ main:
       pt-br: "Posts"
       ru: "Блог"
       zh-cn: "帖子"
+      id: "Postingan"
     url: posts/
   - title:
       en: "Wiki"
@@ -49,4 +54,5 @@ main:
       pt-br: "Github"
       ru: "GitHub"
       zh-cn: "GitHub"
+      id: "GitHub"
     url: https://github.com/EKA2L1/EKA2L1
