Indonesia Translate has been Update (#31)
* Create id.yml

* Create id.yml

* Create download.md

* Create index.md

* Delete id.yml

* Create screenshots.md

* Create quickstart.md

* Create 2021-01-19-new-website.markdown

* Create 2021-01-25-32-bit-android-support.markdown

* Create 2021-01-25-translator_welcome.markdown

* Create 2021-04-14-Google-Play-Store-version-published.markdown

* Create 2021-5-20-EKA2L1 0.0.4 released.markdown

* Create 2021-10-30-Lua-script-API-documentated.md

* Create 2023-01-21-New tutorials for setting up N-Gage and Preconfigured Packs.markdown

* Update _config.yml

* Update navigation.yml

* Update _config.yml

* Update index.md

* Update 2021-01-19-new-website.markdown

---------

Co-authored-by: pent0 <25717050+pent0@users.noreply.github.com>

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,7 @@ main:
       pt-br: "início"
       ru: "Главная"
       zh-cn: "首页"
+      id: "Beranda"
       it: "Home"
     url: /
   - title:
@@ -15,6 +16,7 @@ main:
       pt-br: "Baixar"
       ru: "Скачать"
       zh-cn: "下载"
+      id: "Unduh"
       it: "Scarica"
     url: download/
   - title:
@@ -24,6 +26,7 @@ main:
       pt-br: "Requisitos e instalação"
       ru: "Установка"
       zh-cn: "快速开始"
+      id: "Panduan Persyaratan dan Pemasangan"
       it: "Guida all'uso"
     url: quickstart/
   - title:
@@ -33,6 +36,7 @@ main:
       pt-br: "Imagens"
       ru: "Скриншоты"
       zh-cn: "截图"
+      id: "Pratinjau Screenshot"
       it: "Immagini"
     url: screenshots/
   - title:
@@ -42,6 +46,7 @@ main:
       pt-br: "Posts"
       ru: "Блог"
       zh-cn: "帖子"
+      id: "Postingan"
       it: "Post"
     url: posts/
   - title:
@@ -59,5 +64,6 @@ main:
       pt-br: "Github"
       ru: "GitHub"
       zh-cn: "GitHub"
+      id: "GitHub"
       it: "GitHub"
     url: https://github.com/EKA2L1/EKA2L1
